1.15-2.1.18:
- The tank works better (updates visually better when it's empty or not)
- Improved the item model for the tank

1.15-2.1.17:
- Truetype rendering works again for the screen
- Added a new 'forceNoTruetype' flag with which you can force truetype rendering to be disabled in all cases

1.15-2.1.16:
- Fixed a potential null-crash with the dimension dialer in some cases

1.15-2.1.15:
- The redstone screen module works again

1.15-2.1.14:
- Fixed the broken counter again

1.15-2.1.13:
- Fixed the broken counter (wouldn't keep state on reload)

1.15-2.1.12:
- When the crafter is upgraded it will keep it's current settings

1.15-2.1.11:
- Made the spawner code a bit more robust (and no longer crashing) in case of an invalid syringe

1.15-2.1.10:
- Fixed a crash in the inventory checker when setting illegal slot values
- Syringe no longer appears in every creative tab
- Correct translation for Syringe
- Forgot the recipe for the syringe
- Update to latest McJtyLib

1.15-2.1.9:
- Fixed a problem on servers

2.1.8:
- Safer client-side registrations (thread-safety)
- Various cleanups and fixes
- Fixed a problem with spawner configuration loading on servers

2.1.7:
- Spawner configuration is now a server config (located in <world>/serverconfig/rftoolsutility-mobdata.toml)
- Fixed a potential exploit which could be used to attack a server

2.1.6:
- The Spawner is back!

2.1.5-beta:
- Use the new tick order handler system in RFToolsBase
- Fixed a problem with the shield template being partially invisible when a smaller block was adjacent to it

2.1.4-beta:
- Fixed a potential problem in the dialer in case a dimension was missing
- Fixed a memory leak in the shield projector when the world is unloaded (fake player)
- Fixed a problem with the shield projector where it would crash if it gives player damage to a mob that retaliates to the player in some way (like vindicators)
- The private settings in matter transmitter and receiver work again

2.1.3-beta: